deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: fast-api
